# gen-ai-monorepo

./: .coverage  .env.example  .gitignore  Dockerfile  Makefile  Readme.md  dockerignore  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements.in  requirements.txt
apps/p1_diligence_analyst/: pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
apps/p1_diligence_analyst/app/: main.py
apps/p1_diligence_analyst/app/router/: companyrouter.py  documentrouter.py
apps/p1_diligence_analyst/app/routers/: companyrouter.py
apps/p1_diligence_analyst/app/schemas/: companyschema.py  documentschema.py
apps/p1_diligence_analyst/diligence_analyst/: main.py
apps/p1_diligence_analyst/diligence_analyst/evaluation/: goldendataset.py
apps/p1_diligence_analyst/diligence_analyst/llm/: llmwrapper.py
apps/p1_diligence_analyst/diligence_analyst/prompts/p1_memo/: input_template.md  load_prompt.py  output_template.md  system.md  system_template_judge.md  system_template_judge1.md  system_template_judge2.md  system_template_model1.md
apps/p1_diligence_analyst/diligence_analyst/routers/: __init__.py  companyrouter.py  documentrouter.py  streamingrouter.py  userauthrouter.py
apps/p1_diligence_analyst/diligence_analyst/schemas/: __init__.py  companyschema.py  documentschema.py  memoschema.py  retrivalschema.py
apps/p1_diligence_analyst/tests/: test_health.py  test_testheath.py
eval_results/: 2026-03-20_11-00.json  2026-03-20_13-44.json  2026-03-21_17-03.json  2026-03-21_17-25.json  2026-03-21_17-36.json  2026-03-21_17-51.json  (+2 more)
(+8 files in other folders)
